[gd_scene load_steps=2 format=3 uid="uid://benpi84elt7gh"]

[ext_resource type="Script" path="res://Components/TreasureSpawner/TreasureSpawner.gd" id="1_80e4p"]

[node name="TreasureSpawner" type="Node2D"]
script = ExtResource("1_80e4p")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
